--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,13 @@ dependencies:
   timeago: ^3.7.0
   top_snackbar_flutter: ^3.2.0
   url_launcher: ^6.3.1
-
+  firebase_app_check: ^0.3.2+4
+  flutter_svg: ^2.0.17
+  pin_code_fields: ^8.0.1
+  slide_to_act: ^2.0.2
+  easy_localization: ^3.0.7+1
+  image_picker: ^1.1.2
+  lucide_icons: ^0.257.0
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
   flutter_lints: ^5.0.0
@@ -55,3 +61,4 @@ flutter:
   assets:
     - assets/images/
     - .env
+    - assets/translations/
