--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   custom_calender_picker: ^0.1.1
   dartz: ^0.10.1
+  easy_localization: ^3.0.7+1
   equatable: ^2.0.7
   firebase_auth: ^5.3.3
   firebase_core: ^3.8.0
@@ -32,9 +33,12 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   get_it: ^8.0.3
   google_sign_in: ^6.2.2
+  image_picker: ^1.1.2
   intl: ^0.19.0
   loading_indicator: ^3.1.1
   local_auth: ^2.3.0
+  lucide_icons: ^0.257.0
+  lucide_icons_flutter: ^1.2.9
   share_plus: ^10.1.4
   shared_preferences: ^2.3.5
   skeletonizer: ^1.4.2
@@ -45,9 +49,6 @@ dependencies:
   flutter_svg: ^2.0.17
   pin_code_fields: ^8.0.1
   slide_to_act: ^2.0.2
-  easy_localization: ^3.0.7+1
-  image_picker: ^1.1.2
-  lucide_icons: ^0.257.0
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
   flutter_lints: ^5.0.0
