--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   local_auth: ^2.3.0
   share_plus: ^10.1.4
   shared_preferences: ^2.3.5
+  simple_barcode_scanner: ^0.3.0
   skeletonizer: ^1.4.2
   top_snackbar_flutter: ^3.2.0
   url_launcher: ^6.3.1
